# c-study

./: .gitignore  ImportantTerms.md  README.md  c-advanced.md  cmake-guide.md  cmake-practical-guide.md
Apps/ArrayBasic/: ArrayBasic.cbp  main.c
Apps/ArrayIntermediate/: ArrayIntermediate.cbp  main.c  multidimentionalarray.c
Apps/Conditionals/: Conditionals.cbp  main.c
Apps/FileHandling/: FileHandling.cbp  main.c
Apps/Fucntions/: Fucntions.cbp  main.c
Apps/HelloWorld/: CompilerArgs.c  HelloWorld.depend  main.c
Apps/MadLib/: main.c
Apps/NumbersMathConstantInput/: NumbersMathConstantInput.cbp  main.c
Apps/PreprocessorDirectives/: PragmaGCC.c  PragmeNonGCC.c  PreprocessorDirectives.cbp  main.c
Apps/SimpleCalculator/: main.c
Apps/Structures/: StructFunctionParam.c  StructureInStructure.c  StructurePointerArrow.c  StructurePointerDot.c  main.c
Apps/UserInputs/: UserInputs.cbp  main.c
Tools/CMake/Step1/: CMakeLists.txt  tutorial.cxx
Tools/CMake/Step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Tools/CMake/Step2/MathFunctions/: CMakeLists.txt
Tools/CMake/Step3/MathFunctions/: CMakeLists.txt
Tools/CMake/Step4/: CMakeLists.txt
Tools/Conan/: README.md
